# ChangeLog for net-im/kadu-dbus
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  kadu-dbus-0.6.5.4_rc3.ebuild, +files/kadu-dbus-linking.patch:
  Added hot-fix for linking with DBus.

*kadu-dbus-0.6.5.4_rc3 (18 Jan 2010)

  18 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-dbus-0.6.5.4_rc3.ebuild:
  New ebuild.
