@@ -1,4 +1,5 @@
 AUX kadu-dbus-linking.patch 585 RMD160 fd483e5edf3ace7c726d27943f15a7fd4cd5027a SHA1 001c2044abc36dde65a7e2dfd60f8f89c3324cbe SHA256 8953662f752d6c0f44265608645f131153e7c845732a81d5987b2c968ff4451f
 DIST kadu-0.6.5.4-rc3.tar.bz2 1750341 RMD160 d9535f709957270e72698300f557f08a4f8191ac SHA1 2b65bf09e8951ff38607f7bb08e7019d8334b933 SHA256 1bf9cf8f6c4038339dd58896c8338b5a7321631791218093c386adb7d0328781
 EBUILD kadu-dbus-0.6.5.4_rc3.ebuild 299 RMD160 233a8f61cf89c7c139dd58a0341d4533a8bbcc62 SHA1 0bdddc2e456ff71a556ebe32bc68be98cd282595 SHA256 d09bd8a2ac98a2b328eea4f72d54e8efd73f5a222fba69140783b0b0bb2f366d
-MISC ChangeLog 405 RMD160 fceb704403a27e8c0e33af4877e37da5cd1583ce SHA1 5fb1a183ff2792b3c4c2583b574f79e57b4d7f1b SHA256 93dacf47870462c5ec2f3d4a7f5efd2613f4472d13333fb247e2acfb0af4f6bb
+MISC ChangeLog 509 RMD160 2ac07347afd82c96933da7367e1fccbaf467b3a5 SHA1 e084a1d7e5ec8fccb5c6aa00e5931d9749482d30 SHA256 fa546086ef13874952c8ccc0718a69775ba3c7c64b4a721fb88748d6cb5d70cc
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
