@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +metadata.xml:
+  Missed metadata during the big bump.
+
   18 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
   kadu-dbus-0.6.5.4_rc3.ebuild, +files/kadu-dbus-linking.patch:
   Added hot-fix for linking with DBus.
